Fixed: Right alignment of Hero-Image

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -132,7 +132,7 @@ body {
 /* Hero-Image Starts Here */
 .hero-image {
   position: absolute;
-  right: 10%;
+  right: 12%;
   top: 5%;
   width: 480px;
 }
